paperless/manifests/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1

  selector:
    matchLabels:
      app: paperless

  template:
    metadata:
      labels:
        app: paperless

    spec:
      enableServiceLinks: false
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.0.5

          resources:
            requests:
              cpu: 100m
              memory: 768Mi
            limits:
              memory: 1Gi

          ports:
            - name: http
              containerPort: 8000

          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
              subPath: data

            - name: paperless-data
              mountPath: /usr/src/paperless/media
              subPath: media

            - name: paperless-data
              mountPath: /usr/src/paperless/consume
              subPath: consume

            - name: paperless-data
              mountPath: /usr/src/paperless/export
              subPath: export

      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
