paperless/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless

  ports:
    - name: http
      port: 8000
      targetPort: http

  type: ClusterIP
